--- a/views/list.ejs
+++ b/views/list.ejs
@@ -7,6 +7,12 @@
     <title>To Do List</title>
 </head>
 <body>
-    <h1><%= kindOfDay %> List</h1>
-</body>
+    <% if(kindOfDay == "Saturday" || kindOfDay == "Sunday"){ %>
+        <h1 style="color: purple;"><%= kindOfDay %> List</h1>
+    <% }
+    else{ %>
+        <h1 style="color: blue;"><%= kindOfDay %> List</h1>
+    <% } %>
+
+    </body>
 </html>
