--- a/views/list.ejs
+++ b/views/list.ejs
@@ -7,12 +7,23 @@
     <title>To Do List</title>
 </head>
 <body>
-    <% if(kindOfDay == "Saturday" || kindOfDay == "Sunday"){ %>
-        <h1 style="color: purple;"><%= kindOfDay %> List</h1>
-    <% }
-    else{ %>
-        <h1 style="color: blue;"><%= kindOfDay %> List</h1>
-    <% } %>
+
+    <h1><%= kindOfDay %> List</h1>
+    
+    <ul>
+        <li>Buy Food</li>
+        <li>Cook Food</li>
+        <li>Eat Food</li>
+        <% for(var i=0; i<newListItems.length; i++){ %>
+            <li><%= newListItems[i] %></li>
+        <% } %>
+    </ul>
+
+    <form method="post" action="/">
+        <label>Add a Item</label><br>
+        <input type="text" name="newItem" placeholder="Add item">
+        <button type="submit">Add</button>
+    </form>
 
     </body>
 </html>
