--- a/views/list.ejs
+++ b/views/list.ejs
@@ -11,7 +11,7 @@
     <h1><%= kindOfDay %> List</h1>
     
     <ul>
-        <% for(var i=0; i<newListItems.length; i++){ %>
+        <% for(let i=0; i<newListItems.length; i++){ %>
             <li><%= newListItems[i] %></li>
         <% } %>
     </ul>
