--- a/views/list.ejs
+++ b/views/list.ejs
@@ -17,7 +17,7 @@
         <% newListItems.forEach(function(itemName){ %>
             <form action="/delete" method="post">
                 <div class="item">
-                        <input type="checkbox">
+                        <input type="checkbox" name="checkbox" value="<%= itemName._id %>" onchange="this.form.submit()">
                         <p><%= itemName.itemName %></p>
                 </div>
             </form>
