--- a/views/list.ejs
+++ b/views/list.ejs
@@ -25,7 +25,7 @@
     
         <form method="post" action="/">
             <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
-            <button style="padding-top: 8px;" type="submit" name="list" value="<%= listTitle %>">+</button>
+            <button style="padding-top: 8px;" name="list" type="submit" name="list" value="<%= listTitle %>">+</button>
         </form>
     </div>
 
